# diskdump

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/diskdump/: blockstore.py  cli.py  client.py  config.py  manifest.py  orchestrator.py  protocol.py  restore.py
tests/: conftest.py  test_blockstore.py  test_cli.py  test_e2e.py  test_manifest.py  test_protocol.py  test_restore.py
