[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diskdump"
version = "0.1.5"
description = "Deduplicated disk image transfer over SSH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["lz4"]

[project.scripts]
diskdump = "diskdump.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
